parser/tests/parser/complex/invalid/basic_2.mf2
.foo {:hello}
{{}}
=== spans ===
                    .foo {:hello}↵{{}}
ComplexMessage      ^^^^^^^^^^^^^^^^^^
QuotedPattern                     ^^^^
Pattern             
=== diagnostics ===
Found a statement that is invalid because the keyword 'foo' is keyword. (at @0..13)
  .foo {:hello}↵{{}}
  ^^^^^^^^^^^^^
=== ast ===
ComplexMessage {
    span: @0..18,
    declarations: [],
    body: QuotedPattern {
        span: @14..18,
        pattern: Pattern {
            parts: [],
        },
    },
}